# Robot_C2

./: README.md  driver_node.py  robo.sh
Desktop/open/: live.py
GassistPi/src/: config.yaml
GassistPi/systemd/: gassistpi.service
Robot_support_file/: README.md  autostart  config_file.sh  gassistpi_credential.txt  help.txt  install_ROS.sh  opencv.sh  robot.service  wpa_supplicant.conf
catkin_ws/src/: .rosinstall  README.md
catkin_ws/src/catkin/: .tar
catkin_ws/src/class_loader/: .tar
catkin_ws/src/cmake_modules/: .tar
catkin_ws/src/driver/: package.xml
catkin_ws/src/gencpp/: .tar
catkin_ws/src/geneus/: .tar
catkin_ws/src/genlisp/: .tar
catkin_ws/src/genmsg/: .tar
catkin_ws/src/gennodejs/: .tar
catkin_ws/src/genpy/: .tar
catkin_ws/src/message_generation/: .tar
catkin_ws/src/message_runtime/: .tar
catkin_ws/src/pluginlib/: .tar
catkin_ws/src/ros_environment/: .tar
catkin_ws/src/rosconsole/: .tar
catkin_ws/src/roslisp/: .tar
catkin_ws/src/rospack/: .tar
edukit_bot/: .gitignore  README.md
edukit_bot/src/edukit_bot/: CMakeLists.txt  package.xml
edukit_bot/src/edukit_bot/config/: controller.yaml
edukit_bot/src/edukit_bot/launch/: edukit_bot.launch
edukit_bot/src/edukit_bot/launch/includes/: _teleop.launch.xml  control.launch.xml
edukit_bot/src/edukit_bot/src/: driver_node
face_recog/: .live.py.swp  README.md  capture.py  k.py  recognizer.py  trainner.py
node_red_scripts/: README.md  check_gas_sensor.py  cpu.sh  flows.json  script.sh
robot_C2/devel/: .catkin  .rosinstall
robot_C2/src/: CMakeLists.txt
(+44 files in other folders)
